Actualizando funcionalidades CRUD
La api envia más datos en los Result.
Impllementé el mismo mecanismo del Result en el cliente (BaseBResult) para recibir los datos paginados.